--- a/style/main.css
+++ b/style/main.css
@@ -431,47 +431,47 @@ hr {
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 50px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-128 .tile-inner {
-        font-size: 25px; } }
+      .tile.tile--2 .tile-inner {
+        font-size: 50px; } }
   .tile.tile--4 .tile-inner {
     color: #000000;
     background: #bbba6d;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 50px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-256 .tile-inner {
-        font-size: 25px; } }
+      .tile.tile--4 .tile-inner {
+        font-size: 50px; } }
   .tile.tile--8 .tile-inner {
     color: #ffffff;
     background: #cf9a5e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 50px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-512 .tile-inner {
-        font-size: 25px; } }
+      .tile.tile--8 .tile-inner {
+        font-size: 50px; } }
   .tile.tile--16 .tile-inner {
     color: #ffffff;
     background: #e46c30;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 50px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-1024 .tile-inner {
-        font-size: 15px; } }
+      .tile.tile--16 .tile-inner {
+        font-size: 50px; } }
   .tile.tile--32 .tile-inner {
     color: #ffffff;
     background: #785140;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 50px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-2048 .tile-inner {
-        font-size: 15px; } }
+      .tile.tile--32 .tile-inner {
+        font-size: 50px; } }
   .tile.tile--64 .tile-inner {
     color: #ffffff;
     background: #872719;
     font-size: 50px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-super .tile-inner {
-        font-size: 10px; } }
+      .tile.tile--64 .tile-inner {
+        font-size: 50px; } }
 
 @-webkit-keyframes appear {
   0% {
